--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>test with base 64</title>
+	<title>test with external font</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>test with base 64</h1>
+<h1>test with external font</h1>
 </body>
 </html>
