testing input focus on ios

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>test with external font</h1>
+<h1>external font</h1>
+<input type="text" value="testing ios zoom on input">test
 </body>
 </html>
